fixed alignment of buttons

--- a/code/style.css
+++ b/code/style.css
@@ -1,65 +1,69 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap");
 * {
-  font-family: "Nunito", sans-serif;
-  box-sizing: border-box;
+    font-family: "Nunito", sans-serif;
+    box-sizing: border-box;
 }
 
 h1 {
-  text-align: center;
+    text-align: center;
 }
 
 body {
-  margin-top: 50px;
+    margin-top: 50px;
 }
 
 button {
-  border-radius: 20px;
-  background-color: rgb(45, 87, 46);
-  border: none;
-  color: white;
-  font-weight: bold;
-  padding: 12px 28px;
+    border-radius: 20px;
+    background-color: rgb(45, 87, 46);
+    border: none;
+    color: white;
+    font-weight: bold;
+    padding: 12px 28px;
+}
+
+.btn {
+	text-align: center;
 }
 
 .topnav {
-  overflow: hidden;
-  background-color: #808080;
-  position: fixed;
-  top: 0;
-  width: 100%;
+    overflow: hidden;
+    background-color: #808080;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
 }
 
 footer {
-  text-align: center;
-  overflow: hidden;
-  bottom: 0;
-  width: 100%;
+    text-align: center;
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
 }
 
 .headline {
-  text-align: center;
+    text-align: center;
 }
 
 .active {
-  color: black !important;
+    color: black !important;
 }
 
 #brand {
-  height: 15px;
-  width: auto;
+    height: 15px;
+    width: auto;
 }
 
 #logo {
-  height: 22px;
-  width: 22px !important;
-  margin-top: 0px;
+    height: 22px;
+    width: 22px !important;
+    margin-top: 0px;
 }
